9-rancher/nginx-basico/deploy.yml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: nginx
  namespace: curso

spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: nginx
    spec:
      containers:
        - name: nginx
          image: nginx
          ports:
            - containerPort: 80
