9-rancher/nginx-basico/svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: svc-nginx
  labels:
    name: svc-nginx
spec:
  type: LoadBalancer
  ports:
  - port: 8080
    targetPort: 80
  selector:
    name: nginx
