9-rancher/nginx-basico/ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: nginx
  namespace: curso
spec:
  rules:
  - host: teste.nginx
    http:
      paths:
      - backend:
          serviceName: nginx
          servicePort: 8099
